--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
 		"php-http/guzzle6-adapter": "v1.1.1",
 		"guzzlehttp/psr7": "~1.4",
 		"kevinrob/guzzle-cache-middleware": "~3.2",
-		"league/flysystem": "~1.0",
+		"league/flysystem": "~1.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": " ^3 || ^4 || ^5"
