Ensure this is marked as a silverstripe-module

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
 	"description": "Domain Validation module for Silverstripe",
 	"name": "codem/silverstripe-domain-validation",
+	"type": "silverstripe-module",
 	"keywords": [
 		"silverstripe",
 		"dns",
