--- a/composer.json
+++ b/composer.json
@@ -11,19 +11,18 @@
 	"extra": {
 		"installer-name": "domainvalidation"
 	},
-	"license": "MIT",
+	"license": "BSD-3",
 	"authors": [{
 		"name": "James",
 		"email": "git@codem.com.au"
 	}],
 	"require": {
-		"silverstripe/userforms": "~4.0",
-		"silverstripe/framework": "~3.2",
-		"silverstripe/cms": "~3.2",
-		"php-http/guzzle6-adapter": "v1.1.1",
+		"silverstripe/userforms": "~5.0",
+		"silverstripe/framework": "~4.0",
+		"silverstripe/cms": "~4.0",
+		"php-http/guzzle6-adapter": "~1.0",
 		"guzzlehttp/psr7": "~1.4",
-		"kevinrob/guzzle-cache-middleware": "~3.2",
-		"league/flysystem": "~1.0"
+		"kevinrob/guzzle-cache-middleware": "~3.2"
 	},
 	"require-dev": {
 		"phpunit/phpunit": " ^3 || ^4 || ^5"
