Update configuration to be more consistent

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -9,11 +9,11 @@ Codem\DomainValidation\MxValidatedEmailField:
 Codem\DomainValidation\ValidatedDomainField:
     extensions:
         - 'Codem\DomainValidation\FieldExtension'
-    checks:
+    dns_checks:
         - A
     dns_clients:
         - 'Codem\DomainValidation\CloudflareDnsOverHttps'
 Codem\DomainValidation\DomainLookupForm:
-    checks:
+    dns_checks:
         - A
     dns_client: 'Codem\DomainValidation\CloudflareDnsOverHttps'
