Allow use of GreedyCacheStrategy via a configured TTL (will override cache based on response headers if ttl > 0). Default 0

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,6 +1,8 @@
 ---
 Name: codem-domain-validation
 ---
+Codem\DomainValidation\AbstractDomainValidator:
+    ttl: 0
 Codem\DomainValidation\MxValidatedEmailField:
     extensions:
         - 'Codem\DomainValidation\FieldExtension'
