--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,50 @@
 {
-	"description": "A set of fields, including editable userform fields to perform domain validation via DNS over HTTPS",
-	"name": "codem/silverstripe-domain-validation",
-	"type": "silverstripe-vendormodule",
-	"keywords": [
-		"silverstripe",
-		"dns",
-		"domain",
-		"validation"
-	],
-	"extra": {
-		"installer-name": "domainvalidation"
-	},
-	"license": "BSD-3",
-	"authors": [{
-		"name": "James",
-		"email": "git@codem.com.au"
-	}],
-	"require": {
-		"silverstripe/userforms": "~5.0",
-		"silverstripe/framework": "~4.0",
-		"silverstripe/cms": "~4.0",
-		"php-http/guzzle6-adapter": "~1.0",
-		"guzzlehttp/psr7": "~1.4",
-		"kevinrob/guzzle-cache-middleware": "~3.2"
-	},
-	"require-dev": {
-		"phpunit/phpunit": " ^3 || ^4 || ^5"
-	}
+    "description": "A set of fields, including editable userform fields to perform domain validation via DNS over HTTPS",
+    "name": "codem/silverstripe-domain-validation",
+    "type": "silverstripe-vendormodule",
+    "keywords": [
+        "silverstripe",
+        "dns",
+        "domain",
+        "validation"
+    ],
+    "license": "BSD-3-Clause",
+    "authors": [{
+        "name": "James Ellis",
+        "email": "git@codem.com.au"
+    }],
+    "require": {
+        "silverstripe/userforms": "^5.0",
+        "silverstripe/cms": "^4.6",
+        "php-http/guzzle6-adapter": "^2",
+        "guzzlehttp/psr7": "^1.8",
+        "kevinrob/guzzle-cache-middleware": "^3.3",
+        "php-http/httplug": "^2.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.7",
+        "friendsofphp/php-cs-fixer": "^2.18",
+        "phpstan/phpstan": "^0.12.0",
+        "symbiote/silverstripe-phpstan": "^4",
+        "silverstripe/sqlite3": "^2"
+    },
+    "autoload": {
+        "psr-4": {
+            "Codem\\DomainValidation\\": [
+                "src/Extensions/",
+                "src/Fields/",
+                "src/Forms/",
+                "src/Interfaces/",
+                "src/Models/",
+                "src/Validators/"
+            ]
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Codem\\DomainValidation\\Tests\\": [
+                "tests/"
+            ]
+        }
+    }
 }
